MDEV-19675 Wrong charset is chosen when opening a pre-4.1 table